@@ -6,9 +6,15 @@
 
 namespace logger {
 
-    stdout_sink::stdout_sink(const std::string &name, const std::string &pname, log_level level) :
-            file_sink(name, pname, level, stdout) {
+    stdout_sink::stdout_sink(const std::string &name, const std::string &pname, log_level level, const log_facility_ptr &facility) :
+            file_sink(name, pname, level, facility, stdout) {
         // intentional...
     };
+
+
+    stdout_sink::stdout_sink(const std::string &name, const std::string &pname, log_level level):
+            file_sink(name, pname, level, syslog_facility::default_facility(), stdout){
+
+    }
 
 } // namespace logger
